fix(CardDeck): 불변 컬렉션 버그 수정